deploy/k8s/11-deployment-web.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django
  namespace: artkhoj
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django
      role: fleet
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
  template:
    metadata:
      labels:
        app: django
        role: fleet
    spec:
      securityContext:
        runAsUser: 0
        runAsGroup: 0
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
              - matchExpressions:
                  - key: node-role.kubernetes.io/control-plane
                    operator: DoesNotExist
      containers:
        - name: django
          image: ghcr.io/datatwine/createscale:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "400m"
              memory: "768Mi"
            limits:
              cpu: "800m"
              memory: "768Mi"
          startupProbe:
            httpGet:
              path: /metrics
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            failureThreshold: 30
            periodSeconds: 5
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /metrics
              port: 8000
              httpHeaders:
                - name: Host
                  value: localhost
            periodSeconds: 15
