deploy/k8s/40-daemonset-promtail.yaml
apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: promtail
  namespace: artkhoj
spec:
  selector:
    matchLabels:
      app: promtail
  template:
    metadata:
      labels:
        app: promtail
    spec:
      serviceAccountName: promtail
      containers:
        - name: promtail
          image: grafana/promtail:3.3.2
          args: ["-config.file=/etc/promtail/config.yml"]
          volumeMounts:
            - name: config
              mountPath: /etc/promtail
            - name: pods-log
              mountPath: /var/log/pods
              readOnly: true
            - name: positions
              mountPath: /tmp
      volumes:
        - name: config
          configMap:
            name: promtail-config
        - name: pods-log
          hostPath:
            path: /var/log/pods
        - name: positions
          emptyDir: {}
