deploy/k8s/20-service-web.yaml
apiVersion: v1
kind: Service
metadata:
  name: django
  namespace: artkhoj
spec:
  selector:
    app: django
  ports:
    - port: 8000
      targetPort: 8000
